--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
     "name": "khorsa/ispmanager-api",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "description": "Service to access to ISPManager API",
     "type": "library",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "IspManagerApi\\": "src/"
+            "Khorsa\\IspManagerApi\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "Khorsa\\IspManagerApi\\Tests\\": "tests"
         }
     },
     "authors": [
